# agent-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
agent_vault/: cli.py  client.py  core.py  web.py
docs/: AGENT_README.md  CLI.md  DOCKER.md  SECURITY.md  THREAT_MODEL.md  WEB.md
docs/plans/: 2026-06-04-agent-vault-plan.md  MILESTONES.md
examples/: 01-basics.sh  02-scrubbing.sh  03-multi-host.sh  03-session-invalidation.sh  04-append-only.sh  04-overwrite.sh  05-import.sh
scripts/: smoke_cli.sh  smoke_docker.sh  smoke_web_docker.sh
src/: identity.rs  main.rs  prompt.rs  scrub.rs  store.rs  sysinfo.rs  ticket.rs
tests/: test_cli.py  test_web.py
