[package]
name = "s"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "s"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rpassword = "7"
age = { version = "0.11", default-features = false, features = ["ssh"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"

[profile.release]
lto = true
opt-level = "z"
strip = true
