[project]
name = "agent-vault"
version = "0.1.0"
description = "Password manager for AI agents that use secrets without seeing raw values"
requires-python = ">=3.11"
dependencies = ["cryptography>=46.0.7"]

[project.scripts]
s = "agent_vault.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
